# EyeCAN

./: .gitignore  .gitmodules  CMakeLists.txt  Deprec_CMakeLists.txt  LICENSE  README.md  main.cpp  setup.bat  setup.sh
CMake/: CMakeLicsens.txt  FindLibXml2.cmake
Code Inspection Results/: index.html  report_2025-04-03_07-52-32.sarif.json
JSON-Vorlage/: FrontendBackendTemplate.json
dbcExamples/: Battery.dbc  BatteryPanel.vsysvar  CCP.dbc  Charger.dbc  DAQ.dbc  MC.dbc  Vehicle.dbc  sbg_CAN.dbc  xsens.dbc
dbcppp/: CMakeLists.txt
dbcppp/tests/: Config.h
eyecan-frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json
eyecan-frontend/src/: App.tsx  index.css  main.tsx  store.ts
eyecan-frontend/src/components/create-filter/: CreateFilter.tsx
eyecan-frontend/src/components/dashboard/: DashBoardLayoutGrid.tsx  Dashboard.tsx  DashboardHeader.tsx  DashboardLayoutGrid.tsx
eyecan-frontend/src/components/dashboard/chart/: Chart.tsx  ChartWidget.tsx  chart.module.css
eyecan-frontend/src/components/dashboard/chart/header/: AnomalySkipper.tsx  ChHeader.tsx
eyecan-frontend/src/components/dashboard/chart/header/anomaly-badge/: AnomalyBadge.tsx  anomalyBadge.module.css
eyecan-frontend/src/components/dashboard/knowledgebase/: KbHeader.tsx  KnowledgeBaseWidget.tsx  PlusButton.tsx
eyecan-frontend/src/components/dashboard/knowledgebase/article-preview/: ApHeader.tsx  ArticlePreview.tsx  ArticlePreviewCard.tsx
eyecan-frontend/src/components/dashboard/sidebar/: SideBar.tsx
eyecan-frontend/src/components/dashboard/sidebar/action-buttons/: ActionButtons.tsx
eyecan-frontend/src/components/dashboard/sidebar/data-collection/: DataCollection.tsx  DataCollectionCard.tsx  SelectSignalsDialog.tsx  SelectSignalsForm.tsx  SelectUnitsDialog.tsx  SelectUnitsForm.tsx
eyecan-frontend/src/components/dashboard/sidebar/filter-collection/: FilterCollection.tsx  FilterPreviewCard.tsx  SignalsCard.tsx  UnitsCard.tsx  store.ts
eyecan-frontend/src/components/data/mock-data/: MockData.ts
eyecan-frontend/src/components/miscellaneous/: ApprovalIcon.tsx  ArrowButton.tsx  PlusButton.tsx
eyecan-frontend/src/components/miscellaneous/apply-filter-button/: ApplyButton.tsx  ApplyFilterButton.tsx  applyFilterButton.module.css
eyecan-frontend/src/components/miscellaneous/drop-shadow-container/: DropShadowContainer.tsx
eyecan-frontend/src/components/miscellaneous/scollbar-container/: ScrollableContainer.tsx  scrollbar-contianer.module.css
eyecan-frontend/src/components/miscellaneous/scollbar-conteiner/: ScrollableContainer.tsx  scrollbar-contianer.module.css
eyecan-frontend/src/components/upload-dataset/: FileUploadField.tsx  TitleDescriptionForm.tsx  UploadDataset.tsx
eyecan-frontend/src/components/view-article/: ArticleDetailView.tsx
eyecan-frontend/src/data/: MockData.ts
eyecan-frontend/src/types/: article.ts  dataset.ts  filter.ts  spacing.ts
include/: articleHandler.h  dataFusior.h  datasetHandler.h  dbcReader.h  eyeCanServer.h  eyecanserver.h  informationHandler.h  mdfAndDbcBasics.h  mdfReader.h  ruleHandler.h
source/: articleHandler.cpp  dataFusior.cpp  datasetHandler.cpp  dbcReader.cpp  eyeCanServer.cpp  eyecanServer.cpp  eyecanserver.cpp  informationHandler.cpp  mdfAndDbcBasics.cpp  mdfReader.cpp  ruleHandler.cpp
src/: main.cpp
src/header/: eyecanserver.h
src/source/: eyecanserver.cpp
static/api/: eyecan-api-definition.json  eyecan-api-definition.yaml  eyecan-api-defintion.json  eyecan-api-defintion.yaml  index.html  swagger-initializer.js  swagger-ui-bundle.js
test/: ruleHandlerTest.cpp  testApiEndpoints.cpp  testArticleHandler.cpp  testDataFusior.cpp  testDatasetHandler.cpp  testInformationHandler.cpp  testMain.cpp  testRuleHandler.cpp  test_api_endpoints.cpp
